--- a/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.c.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/apiClient.c.mustache
@@ -250,10 +250,10 @@ char *assembleHeaderField(char *key, char *value) {
     return header;
 }
 
-void postData(CURL *handle, const char *bodyParameters) {
+void postData(CURL *handle, const char *bodyParameters, size_t bodyParametersLength) {
     curl_easy_setopt(handle, CURLOPT_POSTFIELDS, bodyParameters);
     curl_easy_setopt(handle, CURLOPT_POSTFIELDSIZE_LARGE,
-                     strlen(bodyParameters));
+                     bodyParametersLength);
 }
 
 int lengthOfKeyPair(keyValuePair_t *keyPair) {
@@ -276,7 +276,8 @@ void apiClient_invoke(apiClient_t    *apiClient,
                       list_t        *headerType,
                       list_t        *contentType,
                       const char    *bodyParameters,
-                      const char    *requestType) {
+                      size_t       bodyParametersLength,
+                      const char   *requestType) {
     CURL *handle = curl_easy_init();
     CURLcode res;
 
@@ -560,7 +561,7 @@ void apiClient_invoke(apiClient_t    *apiClient,
         {{/hasAuthMethods}}
 
         if(bodyParameters != NULL) {
-            postData(handle, bodyParameters);
+            postData(handle, bodyParameters, bodyParametersLength);
         }
 
         res = curl_easy_perform(handle);
