Add an explicit `self`
I forgot to add it

--- a/modules/openapi-generator/src/main/resources/swift5/APIs.mustache
+++ b/modules/openapi-generator/src/main/resources/swift5/APIs.mustache
@@ -86,7 +86,7 @@ import Vapor
                 }
             }
         } onCancel: {
-            requestTask.cancel()
+            self.requestTask.cancel()
         }
     }
     
