allow general purpose faraday connection configuration

--- a/modules/openapi-generator/src/main/resources/ruby-client/configuration.mustache
+++ b/modules/openapi-generator/src/main/resources/ruby-client/configuration.mustache
@@ -134,6 +134,7 @@ module {{moduleName}}
       @inject_format = false
       @force_ending_format = false
       @logger = defined?(Rails) ? Rails.logger : Logger.new(STDOUT)
+      @configure_connection_blocks = []
 
       yield(self) if block_given?
     end
@@ -357,6 +358,32 @@ module {{moduleName}}
     end
 
     {{#isFaraday}}
+    # Configure Faraday connection directly.
+    #
+    # ```
+    # c.configure_faraday_connection do |conn|
+    #   conn.use Faraday::HttpCache, shared_cache: false, logger: logger
+    #   conn.response :logger, nil, headers: true, bodies: true, log_level: :debug do |logger|
+    #     logger.filter(/(Authorization: )(.*)/, '\1[REDACTED]')
+    #   end
+    # end
+    #
+    # c.configure_faraday_connection do |conn|
+    #   conn.adapter :typhoeus
+    # end
+    # ```
+    #
+    # @param block [Proc] `#call`able object that takes one arg, the connection
+    def configure_faraday_connection(&block)
+      @configure_connection_blocks << block
+    end
+
+    def configure_connection(conn)
+      @configure_connection_blocks.each do |block|
+        block.call(conn)
+      end
+    end
+
     # Adds middleware to the stack
     def use(*middleware)
       set_faraday_middleware(:use, *middleware)
