--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/beanValidation.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/beanValidation.mustache
@@ -1,4 +1,1 @@
-{{#required}}
-  @NotNull
-{{/required}}
-{{>beanValidationCore}}
+{{#required}}{{^isReadOnly}}@NotNull {{/isReadOnly}}{{/required}}{{#isContainer}}{{^isPrimitiveType}}{{^isEnum}}@Valid {{/isEnum}}{{/isPrimitiveType}}{{/isContainer}}{{^isContainer}}{{^isPrimitiveType}}@Valid {{/isPrimitiveType}}{{/isContainer}}{{>beanValidationCore}}
