--- a/modules/openapi-generator/src/main/resources/go/client.mustache
+++ b/modules/openapi-generator/src/main/resources/go/client.mustache
@@ -225,8 +225,16 @@ func parameterAddToQuery(queryParams interface{}, keyPrefix string, obj interfac
 
 	switch valuesMap := queryParams.(type) {
 		case url.Values:
-			valuesMap.Add( keyPrefix, value )
-			break
+		if collectionType == "csv" {
+			if valuesMap.Has(keyPrefix){
+				valuesMap.Set(keyPrefix, valuesMap.Get(keyPrefix) + "," + value)
+			} else {
+				valuesMap.Add(keyPrefix, value)
+			}
+		} else {
+			valuesMap.Add(keyPrefix, value)
+		}
+		break
 		case map[string]string:
 			valuesMap[keyPrefix] = value
 			break
