[Typsescript][angular] fix - basePath type check on Array of string

--- a/modules/openapi-generator/src/main/resources/typescript-angular/api.service.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-angular/api.service.mustache
@@ -71,7 +71,7 @@ export class {{classname}} {
             this.configuration = configuration;
         }
         if (typeof this.configuration.basePath !== 'string') {
-            if (Array.isArray(basePath) && basePath.length > 0) {
+            if (Array.isArray(basePath) && basePath[0]) {
                 basePath = basePath[0];
             }
 
