--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
@@ -1,16 +1,11 @@
 ## {{classname}}
-
 {{#operations}}
-
 {{#operation}}
 
 ### {{#summary}}{{summary}}{{/summary}}
-{{#notes}}### {{notes}}{{/notes}}
 # @name {{operationId}}
 {{httpMethod}} {{basePath}}{{#lambda.doubleMustache}}{{path}}{{/lambda.doubleMustache}}
-{{#authMethods}}{{#isApiKey}}{{keyParamName}}: {{=<% %>=}}{{<% type %>}}<%={{ }}=%>{{/isApiKey}}{{/authMethods}}
-{{#consumes}}Content-Type: {{{mediaType}}}{{/consumes}}
-
+{{#consumes}}Content-Type: {{{mediaType}}}
+{{/consumes}}
 {{/operation}}
-
 {{/operations}}
