--- a/modules/openapi-generator/src/main/resources/swift5/libraries/urlsession/URLSessionImplementations.mustache
+++ b/modules/openapi-generator/src/main/resources/swift5/libraries/urlsession/URLSessionImplementations.mustache
@@ -212,7 +212,7 @@ private var credentialStore = SynchronizedDictionary<Int, URLCredential>()
 
         case is Data.Type:
 
-            completion(.success(Response(response: httpResponse, body: (data ?? Data()) as! T)))
+            completion(.success(Response(response: httpResponse, body: (data ?? Data()) as! T, bodyData: data)))
 
         default:
             fatalError("Unsupported Response Body Type - \(String(describing: T.self))")
