--- a/modules/openapi-generator/src/main/resources/php-nextgen/composer.mustache
+++ b/modules/openapi-generator/src/main/resources/php-nextgen/composer.mustache
@@ -24,15 +24,15 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^7.3",
-        "guzzlehttp/psr7": "^1.7 || ^2.0"
+        "guzzlehttp/guzzle": "^7.4.5",
+        "guzzlehttp/psr7": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0 || ^9.0",
+        "phpunit/phpunit": "^9.0",
         "friendsofphp/php-cs-fixer": "^3.5"
     },
     "autoload": {
