--- a/modules/openapi-generator/src/main/resources/kotlin-spring/apiUtil.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/apiUtil.mustache
@@ -3,12 +3,7 @@ package {{apiPackage}}
 {{^reactive}}
 import org.springframework.web.context.request.NativeWebRequest
 
-{{#useJakartaEe}}
-import jakarta.servlet.http.HttpServletResponse
-{{/useJakartaEe}}
-{{^useJakartaEe}}
-import javax.servlet.http.HttpServletResponse
-{{/useJakartaEe}}
+import {{javaxPackage}}.servlet.http.HttpServletResponse
 import java.io.IOException
 {{/reactive}}
 
