java native form data generator

--- a/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
@@ -12,9 +12,18 @@ import {{import}};
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.http.HttpEntity;
+import org.apache.http.entity.mime.MultipartEntityBuilder;
 
-import java.io.IOException;
 import java.io.InputStream;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.net.http.HttpRequest;
+import java.nio.channels.Channels;
+import java.nio.channels.Pipe;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -425,7 +434,62 @@ public class {{classname}} {
     {{/isString}}
     {{/bodyParam}}
     {{^bodyParam}}
+    {{#hasFormParams}}
+    {{#isMultipart}}
+    MultipartEntityBuilder multiPartBuilder = MultipartEntityBuilder.create();
+    boolean hasFiles = false;
+    {{#formParams}}
+    {{#isArray}}
+    for (int i=0; i < {{paramName}}.size(); i++) {
+        multiPartBuilder.addTextBody("{{{baseName}}}", {{paramName}}.get(i).toString());
+    }
+    {{/isArray}}
+    {{^isArray}}
+    {{#isFile}}
+    multiPartBuilder.addBinaryBody("{{{baseName}}}", {{paramName}});
+    hasFiles = true;
+    {{/isFile}}
+    {{^isFile}}
+    multiPartBuilder.addTextBody("{{{baseName}}}", {{paramName}}.toString());
+    {{/isFile}}
+    {{/isArray}}
+    {{/formParams}}
+    HttpEntity entity = multiPartBuilder.build();
+    HttpRequest.BodyPublisher formDataPublisher;
+    if (hasFiles) {
+        Pipe pipe;
+        try {
+            pipe = Pipe.open();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        new Thread(() -> {
+            try (OutputStream outputStream = Channels.newOutputStream(pipe.sink())) {
+                entity.writeTo(outputStream);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }).start();
+        formDataPublisher = HttpRequest.BodyPublishers.ofInputStream(() -> Channels.newInputStream(pipe.source()));
+    } else {
+        ByteArrayOutputStream formOutputStream = new ByteArrayOutputStream();
+        try {
+            entity.writeTo(formOutputStream);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        formDataPublisher = HttpRequest.BodyPublishers
+            .ofInputStream(() -> new ByteArrayInputStream(formOutputStream.toByteArray()));
+    }
+    localVarRequestBuilder.method("{{httpMethod}}", formDataPublisher);
+    {{/isMultipart}}
+    {{^isMultipart}}
     localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.noBody());
+    {{/isMultipart}}
+    {{/hasFormParams}}
+    {{^hasFormParams}}
+    localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.noBody());
+    {{/hasFormParams}}
     {{/bodyParam}}
     if (memberVarReadTimeout != null) {
       localVarRequestBuilder.timeout(memberVarReadTimeout);
