Keep using double quotes

--- a/modules/openapi-generator/src/main/resources/typescript-axios/apiInner.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-axios/apiInner.mustache
@@ -55,7 +55,7 @@ export const {{classname}}AxiosParamCreator = function (configuration?: Configur
     {{/required}}
     {{/allParams}}
             const localVarPath = '{{{path}}}'{{#pathParams}}
-                .replace('{{baseName}}', encodeURIComponent(String({{paramName}}))){{/pathParams}};
+                .replace("{{baseName}}", encodeURIComponent(String({{paramName}}))){{/pathParams}};
             // use dummy base URL string because the URL constructor only accepts absolute URLs.
             const localVarUrlObj = new URL(localVarPath, DUMMY_BASE_URL);
             let baseOptions;
