--- a/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/native/api.mustache
@@ -13,7 +13,10 @@ import {{import}};
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.http.HttpEntity;
+import org.apache.http.NameValuePair;
 import org.apache.http.entity.mime.MultipartEntityBuilder;
+import org.apache.http.message.BasicNameValuePair;
+import org.apache.http.client.entity.UrlEncodedFormEntity;
 
 import java.io.InputStream;
 import java.io.ByteArrayInputStream;
@@ -481,10 +484,33 @@ public class {{classname}} {
         formDataPublisher = HttpRequest.BodyPublishers
             .ofInputStream(() -> new ByteArrayInputStream(formOutputStream.toByteArray()));
     }
-    localVarRequestBuilder.method("{{httpMethod}}", formDataPublisher);
+    localVarRequestBuilder
+        .header("Content-Type", entity.getContentType().getValue())
+        .method("{{httpMethod}}", formDataPublisher);
     {{/isMultipart}}
     {{^isMultipart}}
-    localVarRequestBuilder.method("{{httpMethod}}", HttpRequest.BodyPublishers.noBody());
+    List<NameValuePair> formValues = new ArrayList<>();
+    {{#formParams}}
+    {{#isArray}}
+    for (int i=0; i < {{paramName}}.size(); i++) {
+        formValues.add(new BasicNameValuePair("{{{baseName}}}", {{paramName}}.get(i).toString()));
+    }
+    {{/isArray}}
+    {{^isArray}}
+    formValues.add(new BasicNameValuePair("{{{baseName}}}", {{paramName}}.toString()));
+    {{/isArray}}
+    {{/formParams}}
+    HttpEntity entity = new UrlEncodedFormEntity(formValues, java.nio.charset.StandardCharsets.UTF_8);
+    ByteArrayOutputStream formOutputStream = new ByteArrayOutputStream();
+    try {
+        entity.writeTo(formOutputStream);
+    } catch (IOException e) {
+        throw new RuntimeException(e);
+    }
+    localVarRequestBuilder
+        .header("Content-Type", entity.getContentType().getValue())
+        .method("{{httpMethod}}", HttpRequest.BodyPublishers
+            .ofInputStream(() -> new ByteArrayInputStream(formOutputStream.toByteArray())));
     {{/isMultipart}}
     {{/hasFormParams}}
     {{^hasFormParams}}
