--- a/modules/openapi-generator/src/main/resources/csharp-netcore-functions/libraries/httpclient/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore-functions/libraries/httpclient/ApiClient.mustache
@@ -536,7 +536,7 @@ namespace {{packageName}}.Client
                 if (timeoutTokenSource != null && timeoutTokenSource.IsCancellationRequested)
                 {
                     throw new TaskCanceledException($"[{req.Method}] {req.RequestUri} was timeout.",
-                        new TimeoutException(original.Message, original), original.CancellationToken);
+                        new TimeoutException(original.Message, original));
                 }
                 throw;
             }
