--- a/modules/openapi-generator/src/main/resources/n4js/api.mustache
+++ b/modules/openapi-generator/src/main/resources/n4js/api.mustache
@@ -1,6 +1,6 @@
 {{>licenseInfo}}
 
-import { FetchExecuterI, ApiError{{#checkRequiredBodyPropsNotNull}}, checkArguments{{/checkRequiredBodyPropsNotNull}}{{#checkSuperfluousBodyProps}}{{#needImportCleanCopyBody}}, cleanCopyBody{{/needImportCleanCopyBody}}{{/checkSuperfluousBodyProps}} } from "{{{apiPackage}}}/ApiHelper"
+import { ApiExecuterI, ApiError{{#checkRequiredParamsNotNull}}, checkRequiredParams{{/checkRequiredParamsNotNull}}{{#checkSuperfluousBodyProps}}{{#needImportCleanCopyBody}}, cleanCopyBody{{/needImportCleanCopyBody}}{{/checkSuperfluousBodyProps}} } from "{{{apiPackage}}}/ApiHelper"
 {{#imports}}
 import { {{classname}} } from '{{filename}}';
 {{/imports}}
@@ -8,46 +8,46 @@ import { {{classname}} } from '{{filename}}';
 
 {{#operations}}
 {{#description}}
-/**
-* {{&description}}
-*/
+/*
+ * {{&description}}
+ */
 {{/description}}
-export public class {{{classname}}} {
-    const basePathName = '{{basePath}}';
 
 {{#operation}}
-    /**
-     {{#notes}}
-     * {{&notes}}
-     {{/notes}}
-     {{#summary}}
-     * @summary {{&summary}}
-     {{/summary}}
-     * @param fei Callback interface that runs the fetch query
-     {{#allParams}}
-     * @param {{paramName}} {{description}}
-     {{/allParams}}
-     {{#responses}}
-     * @response {{code}} [{{#dataType}}{{.}}{{/dataType}}{{^dataType}}undefined{{/dataType}}] {{message}}
-     {{/responses}}
-     */
-    @Final public static async {{{nickname}}}(fei : FetchExecuterI, {{#allParams}}{{{paramName}}}: {{{dataType}}}{{^required}}={{/required}}{{^-last}}, {{/-last}}{{/allParams}}) : Promise<{{#returnType}}{{.}}{{/returnType}}{{^returnType}}undefined{{/returnType}}, Object{{#vendorExtensions}}{{#errResponses.size}} | ApiError<{{#errResponses}}{{^-last}} | {{/-last}}{{{.}}}{{/errResponses}}>{{/errResponses.size}}{{/vendorExtensions}}> {
-        {{#checkRequiredBodyPropsNotNull}}checkArguments('{{{nickname}}}', { {{#allParams}}{{#required}}'{{{paramName}}}': {{{paramName}}}{{^-last}}, {{/-last}}{{/required}}{{/allParams}} });
-        
-        {{/checkRequiredBodyPropsNotNull}}const _pathname = this.basePathName + '{{{path}}}'{{#pathParams}}
-            .replace('{' + '{{baseName}}' + '}', encodeURIComponent(String({{{paramName}}}))){{/pathParams}};
 
-        {{#returnType}}return {{/returnType}}await fei.{{#returnType}}<{{.}}, {{#vendorExtensions}}{{^errResponses.size}}undefined{{/errResponses.size}}{{#errResponses.size}}{{#errResponses}}{{{.}}}{{^-last}} | {{/-last}}{{/errResponses}}{{/errResponses.size}}{{/vendorExtensions}}>{{/returnType}}run(_pathname, {}, {
-            method: '{{httpMethod}}',
-            Object headers: { {{#produces.0}}
-                ['content-type']: '{{mediaType}}'
-           {{/produces.0}} },
-            {{#bodyParam}}
-            body: JSON.stringify({{#vars.empty}}{{{paramName}}}{{/vars.empty}}{{^vars.empty}}{{#checkSuperfluousBodyProps}}cleanCopyBody({{{paramName}}}{{#vars}}, '{{{baseName}}}'{{/vars}}){{/checkSuperfluousBodyProps}}{{^checkRequiredBodyPropsNotNull}}{{{paramName}}}{{/checkRequiredBodyPropsNotNull}}{{/vars.empty}})
-            {{/bodyParam}}
-        });
-    }
+/**
+ {{#notes}}
+ * {{&notes}}
+ {{/notes}}
+ {{#summary}}
+ * @summary {{&summary}}
+ {{/summary}}
+ * @param fe Callback interface that runs the fetch query
+ {{#allParams}}
+ * @param {{paramName}} {{description}}
+ {{/allParams}}
+ {{#responses}}
+ * @response {{code}} [{{#dataType}}{{.}}{{/dataType}}{{^dataType}}undefined{{/dataType}}] {{message}}
+ {{/responses}}
+ */
+export public async function {{{classname}}}__{{{nickname}}}(fe : ApiExecuterI, {{#allParams}}{{{paramName}}}: {{{dataType}}}{{^required}}={{/required}}{{^-last}}, {{/-last}}{{/allParams}}) : Promise<{{#returnType}}{{.}}{{/returnType}}{{^returnType}}undefined{{/returnType}}, Object{{#vendorExtensions}}{{#errResponses.size}} | ApiError<{{#errResponses}}{{^-last}} | {{/-last}}{{{.}}}{{/errResponses}}>{{/errResponses.size}}{{/vendorExtensions}}> {
+{{#checkRequiredParamsNotNull}}    checkRequiredParams('{{{nickname}}}', { {{#allParams}}{{#required}}'{{{paramName}}}': {{{paramName}}}{{^-last}}, {{/-last}}{{/required}}{{/allParams}} });
 
-{{/operation}}
+{{/checkRequiredParamsNotNull}}
+    const _pathParams = { {{#pathParams}}
+        '{{baseName}}': {{{paramName}}}{{^-last}},{{/-last}} {{/pathParams}}};
+    const _queryParams = { {{#queryParams}}
+        '{{baseName}}': {{{paramName}}}{{^-last}},{{/-last}} {{/queryParams}}};
+    const _headerParams = { {{#headerParams}}
+        '{{baseName}}': {{{paramName}}}{{^-last}},{{/-last}} {{/headerParams}}};
+    const _body = {{^bodyParam}}undefined{{/bodyParam}}{{#bodyParam}}{{#vars.empty}}{{{paramName}}}{{/vars.empty}}{{^vars.empty}}{{#checkSuperfluousBodyProps}}cleanCopyBody({{{paramName}}}{{#vars}}, '{{{baseName}}}'{{/vars}}){{/checkSuperfluousBodyProps}}{{^checkSuperfluousBodyProps}}{{{paramName}}}{{/checkSuperfluousBodyProps}}{{/vars.empty}}{{/bodyParam}};
+
+    {{#returnType}}return {{/returnType}}await fe.{{#returnType}}<{{.}}, {{#vendorExtensions}}{{^errResponses.size}}undefined{{/errResponses.size}}{{#errResponses.size}}{{#errResponses}}{{{.}}}{{^-last}} | {{/-last}}{{/errResponses}}{{/errResponses.size}}{{/vendorExtensions}}>{{/returnType}}exec(
+        '{{httpMethod}}', '{{{basePathWithoutHost}}}' + '{{{path}}}',
+        _pathParams, _queryParams, _headerParams,
+        {{#produces.0}}'{{{mediaType}}}'{{/produces.0}}{{^produces.0}}undefined{{/produces.0}},
+        _body
+    );
 }
+{{/operation}}
 {{/operations}}
